[tool:pytest]
python_files = "tests/*"
# Display summary info for (s)skipped, (X)xpassed, (x)xfailed, (f)failed and (e)errored tests
# On Jenkins pytest for some reason runs tests from ./build/ directory - ignore them.
addopts = "-rsxXfE"
testpaths = "tests"

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm>=3.0.0
install_requires=
    retrying
    requests
    dateparser
    pandas


[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest>=3.6
    httmock
    pytest-cov>=2.6.0
    tox
doc =
    sphinx

