[tool:pytest]
python_files = "tests/*"
addopts = "-rsxXfE"
testpaths = "tests"

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm>=3.0.0
install_requires=
    retrying
    requests
    dateparser
    pandas


[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest>=3.6
    httmock
    pytest-cov>=2.6.0
    tox
    coala-bears
doc =
    sphinx

